force-app/main/default/objects/Threat__c/Threat__c.object-meta.xml
<CustomObject>
    <label>Threat</label>
    <pluralLabel>Threats</pluralLabel>
    <nameField>
        <label>Threat Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents a cybersecurity threat detected by ThreatPulse.</description>
</CustomObject>