force-app/main/default/objects/Threat__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Malware</fullName>
            </value>
            <value>
                <fullName>Phishing</fullName>
            </value>
            <value>
                <fullName>Ransomware</fullName>
            </value>
            <value>
                <fullName>DDoS</fullName>
            </value>
            <value>
                <fullName>Insider Threat</fullName>
            </value>
            <value>
                <fullName>APT</fullName>
                <label>APT (Advanced Persistent Threat)</label>
            </value>
            <value>
                <fullName>Vulnerability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>