force-app/main/default/objects/Threat__c/validationRules/Active_Threat_Must_Have_Severity.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Threat_Must_Have_Severity</fullName>
    <active>true</active>
    <description>An active threat must have a Severity assigned.</description>
    <errorConditionFormula>Is_Active__c &amp;&amp; ISBLANK(TEXT(Severity__c))</errorConditionFormula>
    <errorMessage>Severity is required for all active threats.</errorMessage>
    <errorDisplayField>Severity__c</errorDisplayField>
</ValidationRule>