force-app/main/default/objects/Threat__c/validationRules/Detected_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Detected_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>Threat detection date cannot be set in the future.</description>
    <errorConditionFormula>NOT(ISBLANK(Detected_Date__c)) &amp;&amp; Detected_Date__c > NOW()</errorConditionFormula>
    <errorMessage>Detected Date cannot be in the future.</errorMessage>
    <errorDisplayField>Detected_Date__c</errorDisplayField>
</ValidationRule>